# fast_melbo

./: .gitignore  README.md  core.html  core.html.md  index.html  index.html.md  nbdev_export.sh  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  todo.txt
_proc/: 00_core.ipynb  index.ipynb
batched_melbo/: _modidx.py  batched_melbo.py  original_melbo.py
fast_melbo/: _modidx.py
nbdev/: batched_melbo.ipynb  index.ipynb  nbdev.yml  original_melbo.ipynb
nbs/: index.ipynb  nbdev.yml
notebooks/: batched_melbo_performance.ipynb  batched_melbo_validation.ipynb  demo_backdoor_chat.ipynb  fast_melbo_performance.ipynb  requirements_old.txt
src/: batched_melbo.py  fast_unsupervised_steering.py  original_melbo.py  unsupervised_steering.py
