[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name="batched_melbo"
requires-python=">=3.11"
description = "Optimising unsupervised steering vector (a.k.a MELBO) training"
dynamic = [
    "readme",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "entry-points",
    "optional-dependencies",
    "version",
]
dependencies = [
    "transformers>=4.39.2",
    "torch>=2.2.1",
    "tqdm>=4.65.0",
    "jaxtyping>=0.3.3",
    "ipykernel>=7.1.0",
    "tiktoken>=0.12.0",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
    "matplotlib>=3.10.7",
]

[dependency-groups]
dev = [
    "jupytext>=1.18.1",
    "nbdev>=2.4.6",
    "twine>=6.2.0",
]
